# tg-swarm

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  onboard.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_utils.py  server.py  shared_instructions.md  swarm.py
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: test-mac.yml
agents/: __init__.py
agents/account_manager/: __init__.py  agent.py
agents/discovery/: __init__.py  agent.py
agents/observation/: __init__.py  agent.py
agents/strategy/: __init__.py  agent.py
deploy/no-docker/: README.md  nginx-tg-swarm.conf  tg-swarm-scheduler.service  tg-swarm.service
prompts/: account_manager.md  discovery.md  live_engagement.md  live_engagement_review.md  live_engagement_skill_selector.md  live_engagement_triage.md  observation.md  orchestrator.md  researcher.md  shared_runtime.md  strategy.md
telegram_app/: __init__.py  app_service.py  campaign_context.py  campaign_intent.py  campaign_setup.py  conversion_target.py  discovery.py  intake.py  json_store.py  orchestrator_adapter.py  polling_runner.py  workflow_validation.py
telegram_app/agent_runtime/: __init__.py  broker.py
telegram_app/approvals/: __init__.py  approval_manager.py  approval_store.py
telegram_app/auth/: __init__.py  auth_manager.py  auth_store.py  models.py
telegram_app/autonomous_send/: __init__.py  manager.py  models.py  service.py
telegram_app/campaign_assets/: __init__.py  analyzers.py  downloader.py  intake.py  manager.py
telegram_app/campaign_memory/: __init__.py  manager.py  operational_notes.py
telegram_app/campaign_signals/: __init__.py  bridge.py  manager.py  models.py  review.py
telegram_app/campaigns/: __init__.py  manager.py
telegram_app/capabilities/: __init__.py  accounts.py  audit.py  base.py  communities.py  membership.py  messaging.py  stub.py
tests/: conftest.py  test_account_auth_flow.py  test_agent_capability_tooling.py  test_autonomous_send.py  test_campaign_context_promotion.py  test_campaign_signals.py  test_compiled_intents.py  test_continuous_ops.py  test_conversation_review_triggering.py  test_engagement_brain.py  test_engagement_listener.py  test_engagement_policy.py  test_engagement_triage.py  test_external_conversation_timing.py  test_external_conversations.py  test_live_execution.py  test_live_execution_policy.py  test_live_ops.py  test_mtproto_capabilities.py  test_native_outreach_runtime.py  test_observation_review.py  test_operator_notifications.py  test_polling_runner.py  test_prepared_execution.py  test_qualification.py  test_runtime_monitoring.py  test_scheduler_runner.py  test_server_runtime.py  test_telegram_bot_api.py  test_telegram_runtime_state.py
tools/: files.py  model_availability.py  search.py  time_utils.py
virtual_assistant/: __init__.py
wiki/: index.md  log.md
(+276 files in other folders)
