[project]
name = "tg-swarm"
description = "Telegram-native autonomous agent platform with a purpose-built orchestrator"
version = "0.1.0"
license = { text = "MIT" }
keywords = ["telegram", "multi-agent", "orchestrator", "automation", "tg-swarm"]
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "Telethon>=1.36.0",
    "httpx",
]

[project.scripts]
tg-swarm = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["agentswarm-cli*", "venv*", ".venv*", ".agency_swarm*", "node_modules*", "*.node_modules*", "activity*", "mnt*", "pptx*", "slides"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
